--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,1 +1,35 @@
-"" 
+# dependencies
+node_modules/
+
+# production build
+build/
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# IDE files
+.vscode/
+.idea/
+
+# Coverage directory
+coverage/
+
+# Optional eslint cache
+.eslintcache
+
+# Parcel-bundler cache (if using parcel)
+.cache/
+.parcel-cache/
+
+# Mac system files
+Thumbs.db
